<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">fly</string>
    <string name="title">Time</string>
    <string name="fly">Fly</string>
    <string name="action_settings">Settings</string>
    <string name="start">START</string>
    <string name="score">SCORE</string>
    <string name="help">HELP</string>
    <string name="exit">EXIT</string>
    <string name="title_activity_help_page">HelpPage</string>
    <string name="title_activity_loading">Loading</string>
    <string name="hello_world">Hello world!</string>
   	<string name="title_welcome_screen">WelcomeScreen</string>
    <string name="title_activity_score_board">ScoreBoard</string>
    <string name="title_activity_difficulty">Difficulty</string>
    <string name="title_activity_show_result">ShowResult</string>
    <string name="determinate">Try IT</string>
    <string name="progress">Process</string>

</resources>
