<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="init.WelcomeScreen" >

    <Button
        android:id="@+id/button3"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button2"
        android:layout_marginBottom="30dp"
        android:background="@drawable/buttonshape"
        android:onClick="finish"
        android:shadowColor="#2CA819"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/exit"
        android:textColor="#0B2E02"
        android:textSize="21sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_above="@+id/button4"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/buttonshape"
        android:onClick="sendMessage"
        android:shadowColor="#2CA819"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/start"
        android:textColor="#0B2E02"
        android:textSize="21sp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_above="@+id/button2"
        android:layout_alignLeft="@+id/button1"
        android:layout_marginBottom="22dp"
        android:background="@drawable/buttonshape"
        android:onClick="scoreBoard"
        android:shadowColor="#2CA819"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/score"
        android:textColor="#0B2E02"
        android:textSize="21sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_above="@+id/button3"
        android:layout_alignLeft="@+id/button4"
        android:layout_marginBottom="20dp"
        android:background="@drawable/buttonshape"
        android:onClick="goHelp"
        android:shadowColor="#2CA819"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/help"
        android:textColor="#0B2E02"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/title"
        android:textColor="#ff9900"
        android:textSize="65sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:text="@string/fly"
        android:textColor="#ff9900"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button1"
        android:layout_alignRight="@+id/button1"
        android:layout_alignTop="@+id/textView1"
        android:text="Connect Failed" />

</RelativeLayout>