<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    
    <ProgressBar
        android:id="@+id/large_indeterminate"
        style="?android:attr/progressBarStyleLarge" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true" />

    <ProgressBar
        android:id="@+id/horizontal_indeterminate"
        
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true" />

    <Button
        android:id="@+id/indeterminate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <ProgressBar
        android:id="@+id/large_determinate"
        style="?android:attr/progressBarStyleLargeInverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="100"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/horizontal_determinate"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="120dp"
        android:max="100"
        android:visibility="gone" />

    <TextView
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress" />

    <Button
        android:id="@+id/determinate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/determinate" />

</LinearLayout>